tests/snapshots/regression-tactical_modes-defense_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Confessor
ship/capacitorStablePercentage               = 91.237234
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 7.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 15.600000
ship/passiveShieldEffectiveRechargeRate      = 5.000000
ship/passiveShieldRechargeRate               = 3.125000
ship/velocityBoost                           = 110.054348
ship/ehp                                     = 5439.490407
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.112500
ship/shieldExplosiveDamageEffectiveResonance = 0.062500
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.108333
ship/armorKineticDamageEffectiveResonance    = 0.093750
ship/armorExplosiveDamageEffectiveResonance  = 0.066667
ship/armorEmDamageEffectiveResonance         = 0.083333
ship/shieldEhp                               = 1200.000000
ship/hullEhp                                 = 1399.253696
ship/armorEhp                                = 2840.236710
ship/shieldDamageEffectiveResonance          = 0.625000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.352083
ship/powerFree                               = 53.800000
ship/cpuFree                                 = 165.750000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 82.876201
ship/capacitorPeakDelta                      = 8.632938
ship/capacitorPeakLoad                       = 1.783729
ship/capacitorPeakRecharge                   = 10.416667
ship/alignTime                               = 6.456666
ship/mass                                    = 2300000.000000
ship/hp                                      = 937.500000
ship/powerOutput                             = 77.500000
ship/powerLoad                               = 23.700000
ship/maxVelocity                             = 656.419837
ship/cpuOutput                               = 225.000000
ship/cpuLoad                                 = 59.250000
ship/rechargeRate                            = 240000.000000
ship/agility                                 = 2.025000
ship/maxTargetRange                          = 56250.000000
ship/scanSpeed                               = 3750.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanRadarStrength                       = 15.600000
ship/shieldCapacity                          = 750.000000
ship/armorHP                                 = 1000.000000
ship/armorEmDamageResonance                  = 0.333333
ship/armorExplosiveDamageResonance           = 0.266667
ship/armorKineticDamageResonance             = 0.375000
ship/armorThermalDamageResonance             = 0.433333
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 600000.000000
ship/capacitorCapacity                       = 1000.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 43.333333
ship/scanResolution                          = 650.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusTacticalDestroyerAmarr1        = 37.500000
ship/shipBonusTacticalDestroyerAmarr2        = -50.000000
ship/shipBonusTacticalDestroyerAmarr3        = -25.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

mode/type = Confessor Defense Mode

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type              = Small Focused Beam Laser II
high_1/state             = active
high_1/speedWithReload   = 3222.009931
high_1/speedOfReload     = 0.010000
high_1/capacitorPeakLoad = 1.050396
high_1/cycleTime         = 3221.999931
high_1/capacitorNeed     = 3.384375
high_1/power             = 11.700000
high_1/cpu               = 14.250000
high_1/speed             = 3221.999931
high_1/maxRange          = 16500.000000
high_1/damageMultiplier  = 17.176764
high_1/falloff           = 3125.000000
high_1/trackingSpeed     = 112.500000
high_1/heatDamage        = 0.703125

medium_1/type              = 1MN Afterburner II
medium_1/state             = active
medium_1/capacitorPeakLoad = 0.733333
medium_1/cycleTime         = 7500.000000
medium_1/capacitorNeed     = 5.500000
medium_1/speedFactor       = 168.750000
medium_1/duration          = 7500.000000
medium_1/heatDamage        = 5.400000

low_1/type  = Heat Sink II
low_1/state = online
